--- a/app/prepdocs/PrepareDocs/PrepareDocs.csproj
+++ b/app/prepdocs/PrepareDocs/PrepareDocs.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Azure.Search.Documents" />
     <PackageReference Include="Azure.Storage.Blobs" />
     <PackageReference Include="Microsoft.Extensions.FileSystemGlobbing" />
+    <PackageReference Include="Milvus.Client" />
     <PackageReference Include="PdfSharpCore" />
     <PackageReference Include="System.CommandLine" />
   </ItemGroup>
