--- a/app/backend/MinimalApi.csproj
+++ b/app/backend/MinimalApi.csproj
@@ -31,4 +31,13 @@
     <ProjectReference Include="..\shared\Shared\Shared.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="appsettings.Development.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+    <Content Update="appsettings.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
 </Project>
