--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -2,8 +2,8 @@
 
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
-EXPOSE 8080
-EXPOSE 443
+ENV ASPNETCORE_URLS=http://+:5000
+EXPOSE 5000
 
 FROM --platform=$BUILDPLATFORM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
