--- a/app/backend/Properties/launchSettings.json
+++ b/app/backend/Properties/launchSettings.json
@@ -9,18 +9,9 @@
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5167"
     },
-    "https": {
-      "commandName": "Project",
-      "launchBrowser": true,
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      },
-      "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7181"
-    },
     "Docker": {
       "commandName": "Docker",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}",
       "publishAllPorts": true
     }
